
syntax = "proto3";
import "api/proto/wallet/PreTransfer.proto";

package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

message PreWithDrawReq{
    // 提现金额
    double amount=1;
    
    //手机短信验证码
    string smscode=2;

    //银行名称 
    string bank=3;

    //银行卡号
    string bankCard=4;

    //银行开卡人姓名
    string cardOwner=5;
}

message PreWithDrawRsp{
    //提现单编号，UUID
    string withdrawUUID=1;

    //向平台方转账的裸交易结构体
    RawDesc rawDescToPlatform=2;
    
    //时间
    fixed64 time=3;

}