syntax = "proto3";
import "api/proto/wallet/Wallet.proto";
package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

message SyncCollectionHistoryPageReq {
    //发起方
    string fromUsername=1;
    //开始时间
    fixed64 startAt=2;
    //结束时间
    fixed64 endAt=3;
    //页数,第几页
    int32 page=4;
    //每页记录数量
    int32 pageSize=5;
}

message SyncCollectionHistoryPageRsp {
    //收款记录列表
    repeated Collection collections=1;
   
    //按请求参数的pageSize计算出来的总页数
    int32 total=2;
}