syntax = "proto3";
import "api/proto/global/Global.proto"; 
package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

//交易类型
message TxHashInfoReq {
    //交易哈希
    global.TransactionType txType=1;
    //交易哈希
    string  txHash=2;
}
message TxHashInfoRsp {
    //区块高度
    fixed64 blockNumber=1;

    //燃气值 
    fixed64 gas=2;

    //随机数  
    fixed64 nonce=3;

    //数据，hex格式
    string data=4;

    //接收者账号
    string to=5;
}