syntax = "proto3";
import 'api/proto/wallet/Alipay.proto';
//import 'api/proto/global/Global.proto';

package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";


//钱包的Grpc接口
service LianmiWallet {
    //订单的转账(完成，退款)
    rpc TransferByOrder (TransferReq) returns (TransferResp);

    //获取用户钱包eth及LNMC代币余额
    rpc GetUserBalance (GetUserBalanceReq) returns (GetUserBalanceResp);

    //根据HD的索引号，获取对应的钱包地址 
    rpc GetWalletAddressbyBip32Index (GetWalletAddressbyBip32IndexReq) returns (GetWalletAddressbyBip32IndexResp);

    //订单图片上链
    rpc OrderImagesOnBlockchain(OrderImagesOnBlockchainReq) returns  (OrderImagesOnBlockchainResp);

    //支付宝发起预支付
    rpc DoPreAlipay(PreAlipayReq) returns (PreAlipayResp);

    //充值，从ERC20代币总账号转账到目标普通账号
    rpc DepositForPay(DepositForPayReq) returns  (DepositForPayResp);

}


//==== 订单的转账(完成，退款) =====//
message TransferReq {

    //订单ID
    string orderID =1;

    //类型， 支付类型，1-向商户付款 ，2-退款
    int32  payType =2;

}

message TransferResp {
    int32 errCode = 1; //错误码  默认是0为成功， 非0-失败
    string errMsg = 2; //错误描述

}

//======获取钱包余额======//
message GetUserBalanceReq {
    string username =1;
}

message GetUserBalanceResp {
    fixed64 balanceEth  =1;
    fixed64 balanceLNMC =2;
    string walletAddress =3;
}

//======根据HD的索引号，获取对应的钱包地址 ======//
message GetWalletAddressbyBip32IndexReq {
    fixed64 bip32index  =1;
}

message GetWalletAddressbyBip32IndexResp {
    string walletAddress  =1;
}

message OrderImagesOnBlockchainReq{
    // 订单ID
    string orderID =1;

    // 商品ID
    string productID =2;

    //买家注册账号
    string buyUsername =3;

    //商户注册账号
    string businessUsername =4;

    //订单内容哈希 
     string attachHash =5;

    //换算为wei为单位的订单总金额, 例子： cost=2.0元, amount=200wei
    fixed64 amount=6;

    // 订单图片oss objectId
    string orderImage =7;
}

message OrderImagesOnBlockchainResp{
     // 订单ID
    string orderID =1;

    // 区块高度 
    fixed64 blockNumber=2;

    // 交易哈希hex
    string hash=3;

    //时间
    fixed64 time=4;
}

message DepositForPayReq{
    //订单号
    string tradeNo =1;

    //用户账号
    string username =2;

    //充值金额，人民币格式
    double totalAmount=3;


}

message DepositForPayResp{
    //充值之后的连米币余额
    fixed64 balanceLNMC =1;

    // 区块高度 
    fixed64 blockNumber=2;

    // 交易哈希hex
    string hash=3;

    //时间
    fixed64 time=4;
}